--- a/src/Layout/Content1.css
+++ b/src/Layout/Content1.css
@@ -1,26 +1,124 @@
 .banner-container {
-    position: relative; /* Ensure the container is positioned relative to its containing block */
-  }
-  
+  position: relative;
+}
+
+.mobile-banner {
+  display: block;
+  width: 100%;
+  max-width: 100%;
+}
+.mobile-banner-container img{
+  height: 450px;
+}
+
+.desktop-banner {
+  display: none;
+}
+
+.mobile-content {
+  display: relative;
+}
+
+.text {
+  background-color: rgba(0, 0, 0, 0.4);
+  color: white;
+  padding: 20px;
+  border-radius: 10px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 60px;
+  text-align: center;
+  width: 250px;
+}
+
+.below-button {
+  background-color: rgba(250, 160, 160);
+  color: black;
+  border: none;
+  padding: 5px 80px;
+  border-radius: 10px;
+  cursor: pointer;
+  position: absolute;
+  left: 50%;
+  bottom: 15px;
+  transform: translateX(-50%);
+  width: 125px;
+  text-align: center;
+}
+.below-button button {
+  background-color: transparent;
+  border: none;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+/* For tablets */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
   .mobile-banner {
-    display: block; /* Ensure the banner is displayed as a block element */
-    width: 100%; /* Ensure the banner fills its container */
-    max-width: 100%; /* Ensure the banner doesn't exceed its natural size */
+    display: none;
   }
-  
+
   .desktop-banner {
-    display: none; /* Hide the desktop banner by default */
+    display: block;
+    width: 100%;
+    max-width: 100%;
   }
-  
-  @media screen and (min-width: 1024px) {
-    .mobile-banner {
-      display: none; /* Hide the mobile banner on screens wider than 1023px */
-    }
-  
-    .desktop-banner {
-      display: block; /* Display the desktop banner on screens wider than 1023px */
-      width: 100%; /* Ensure the banner fills its container */
-      max-width: 100%; /* Ensure the banner doesn't exceed its natural size */
-    }
+
+  .mobile-content {
+    display: none;
   }
-  
+
+  .desktop-content {
+    display: relative;
+  }
+
+  .text {
+    bottom: 225px;
+    left: 70%;
+    transform: translateX(-50%);
+  }
+
+  .below-button {
+    bottom: 180px;
+    left: 70%;
+    transform: translateX(-50%);
+  }
+}
+
+/* For desktops */
+@media screen and (min-width: 1025px) {
+  .mobile-banner {
+    display: none;
+  }
+  .desktop-banner {
+    display: flex; /* Use flexbox */
+    justify-content: center; /* Center the content horizontally */
+    align-items: center; /* Center the content vertically */
+    width: 100%; /* Take up the full width */
+    height: 650px; /* Set desired height */
+}
+
+
+
+  .mobile-content {
+    display: none;
+  }
+
+  .desktop-content {
+    display: relative;
+  }
+
+  .text {
+    bottom: 250px;
+    left: 60%;
+    transform: translateX(-50%);
+  }
+
+  .below-button {
+    bottom: 210px;
+    left: 60%;
+    transform: translateX(-50%);
+  }
+}
