Refactor code and update file names and paths

--- a/src/index.css
+++ b/src/index.css
@@ -1,704 +1,17 @@
 @font-face {
   font-family: "MarkOt";
-  src: url(./Assets/Fonts/MarkOT.otf);
+  src: url("./Assets/Fonts/MarkOT.otf");
 }
 
-* {
+*{
   font-family: "MarkOt";
 }
-
-body {
+body{
   margin: 0;
 }
-
-button {
+button{
   font-size: 17px;
 }
-
-b {
+b{
   color: #000;
-}
-
-.banner-container {
-  position: relative;
-}
-
-.mobile-banner {
-  display: block;
-  width: 100%;
-  max-width: 100%;
-}
-
-.mobile-banner-container img {
-  height: 450px;
-}
-
-.desktop-banner {
-  display: none;
-}
-
-.mobile-content {
-  display: relative;
-}
-
-.below-button,
-.text {
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 60px;
-  text-align: center;
-  width: 250px;
-}
-
-.below-button {
-  background-color: rgba(250, 160, 160);
-  color: #000;
-  border: 0;
-  padding: 5px 80px;
-  cursor: pointer;
-  bottom: 15px;
-  width: 125px;
-}
-
-.below-button button {
-  background-color: transparent;
-  border: 0;
-  color: #000;
-  font-weight: 700;
-  cursor: pointer;
-}
-
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  .mobile-banner {
-    display: none;
-  }
-
-  .desktop-banner {
-    display: block;
-    width: 100%;
-    max-width: 100%;
-  }
-
-  .mobile-content {
-    display: none;
-  }
-
-  .desktop-content {
-    display: relative;
-  }
-
-  .below-button,
-  .text {
-    bottom: 225px;
-    left: 70%;
-    transform: translateX(-50%);
-  }
-
-  .below-button {
-    bottom: 180px;
-  }
-}
-
-@media screen and (min-width: 1025px) {
-  .mobile-banner {
-    display: none;
-  }
-
-  .desktop-banner {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 650px;
-  }
-
-  .mobile-content {
-    display: none;
-  }
-
-  .desktop-content {
-    display: relative;
-  }
-
-  .below-button,
-  .text {
-    bottom: 250px;
-    left: 60%;
-    transform: translateX(-50%);
-  }
-
-  .below-button {
-    bottom: 210px;
-  }
-}
-
-.picture-container {
-  display: flex;
-  justify-content: center;
-}
-
-.picture {
-  max-width: 100%;
-  height: auto;
-}
-
-@media (max-width: 767px) {
-  .picture {
-    margin: 10px;
-  }
-
-  .picture-container img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media (min-width: 1024px) {
-  .picture-container,
-  .picture-container img {
-    width: 100%;
-  }
-
-  .picture {
-    max-width: 100%;
-    height: 425px;
-  }
-}
-
-@media (min-width: 1025px) {
-  .picture-container,
-  .picture-container img {
-    width: 100%;
-  }
-
-  .picture {
-    max-width: 100%;
-    height: 650px;
-  }
-}
-
-.text-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.content3 {
-  text-align: center;
-}
-
-.blue {
-  color: #47929c;
-  padding: 10px 20px;
-}
-
-.lists {
-  text-align: left;
-  margin-left: 50px;
-  margin-right: 50px;
-  color: #535353;
-}
-
-.lists p {
-  margin-left: -20px;
-}
-
-.lists ul {
-  list-style-type: upper-alpha;
-  padding-left: 0;
-}
-
-.lists ul li {
-  margin-bottom: 10px;
-}
-
-.lists ul li::marker {
-  color: #47929c;
-}
-
-.below-button1 {
-  background-color: rgba(250, 160, 160);
-  color: #000;
-  border: 0;
-  padding: 5px 80px;
-  border-radius: 10px;
-  cursor: pointer;
-  margin-bottom: 16px;
-  bottom: 15px;
-  text-align: center;
-}
-
-.below-button1 button {
-  background-color: transparent;
-  border: 0;
-  color: #000;
-  font-weight: 700;
-  cursor: pointer;
-  padding: 5px;
-}
-
-.subtitle {
-  margin-right: 60px;
-}
-
-@media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .subtitle {
-    margin-right: 40px;
-  }
-
-  .text-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-}
-
-@media only screen and (min-width: 1025px) {
-  .subtitle {
-    margin-right: 60px;
-  }
-
-  .text-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-
-  .blue {
-    color: #47929c;
-    padding: 10px 20px;
-    margin-bottom: 25px;
-  }
-
-  .lists {
-    max-width: 500px;
-    font-size: larger;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .container img {
-    max-width: 100%;
-    height: auto;
-  }
-}
-
-@media only screen and (min-width: 769px) {
-  .container img {
-    max-width: 100%;
-    height: auto;
-  }
-}
-
-.desktop-button {
-  display: none;
-}
-
-.mobile-button {
-  display: block;
-}
-
-@media only screen and (min-width: 768px) {
-  .mobile-button {
-    display: none;
-  }
-
-  .desktop-button {
-    display: block;
-  }
-}
-
-.container {
-  max-width: 100%;
-  overflow: hidden;
-}
-
-.container img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: -5px;
-}
-
-@media only screen and (max-width: 768px) {
-  .container img {
-    max-width: 100%;
-    height: auto;
-  }
-}
-
-@media only screen and (min-width: 769px) {
-  .container img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.FAQs-container {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: auto;
-}
-
-.faq-item {
-  color: #47929c;
-  margin-bottom: 20px;
-  text-align: left;
-  padding-bottom: 10px;
-}
-
-.faq-question {
-  cursor: pointer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  border-bottom: 1px solid #d3d3d3;
-  padding-bottom: 5px;
-}
-
-.faq-question:hover {
-  opacity: 0.7;
-}
-
-.faq-question div:last-child {
-  margin-left: 10px;
-}
-
-.faq-answer {
-  margin-top: 10px;
-}
-
-@media screen and (max-width: 768px) {
-  .faq-question {
-    max-width: 90%;
-    margin: auto;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .FAQs-container {
-    width: 30%;
-  }
-}
-
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.grid-container > :first-child {
-  grid-column: span 2;
-}
-
-.grid-container > :nth-child(n + 2) {
-  grid-column: auto;
-}
-
-@media screen and (max-width: 768px) {
-  .grid-container {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px),
-  screen and (min-width: 1025px) {
-  .grid-container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .grid-container :nth-child(n + 4) {
-    order: 2;
-  }
-
-  .grid-container :nth-child(n + 5) {
-    order: 1;
-  }
-
-  .grid-container :nth-child(n + 6) {
-    order: 3;
-  }
-}
-
-.layout {
-  padding-top: 60px;
-}
-
-@media screen and (max-width: 768px) {
-  .layout {
-    padding-top: 40px;
-  }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1024px) {
-  .layout {
-    padding-top: 40px;
-  }
-}
-
-.navbar {
-  background-color: #85c5b9;
-  color: #fff;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-  transition: transform 0.3s ease-in-out;
-  z-index: 1000;
-}
-
-.nav-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem 2rem;
-}
-
-.nav-links {
-  display: flex;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.nav-links.open {
-  display: block;
-  padding: 20px;
-}
-
-.nav-links li {
-  margin-right: 20px;
-}
-
-.nav-links li a {
-  color: inherit;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.nav-links li a:hover {
-  color: gold;
-}
-
-.logo {
-  margin-right: auto;
-}
-
-.menu-icon {
-  display: none;
-  cursor: pointer;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 24px;
-}
-
-.right-buttons {
-  display: none;
-  margin-left: auto;
-}
-
-.left-buttons {
-  top: 550%;
-  left: 1.7%;
-  position: absolute;
-}
-
-.nav-links.open .right-buttons,
-.right-buttons {
-  display: flex;
-  align-items: center;
-}
-
-.right-buttons .button {
-  margin-right: 10px;
-  border: 0;
-  background-color: transparent;
-  color: #fff;
-  font-weight: inherit;
-  cursor: pointer;
-}
-
-.cart {
-  margin-left: 10px;
-  cursor: pointer;
-}
-
-@media (max-width: 600px) {
-  .right-buttons {
-    display: none;
-  }
-
-  .logo {
-    margin: auto;
-  }
-
-  .nav-container {
-    flex-direction: row-reverse;
-    align-items: flex-start;
-    padding: 4px;
-    margin-top: 4px;
-  }
-
-  .menu-icon {
-    display: flex;
-    color: #fff;
-  }
-
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    background-color: #85c5b9;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding-left: 20px;
-    padding-top: 5px;
-  }
-
-  .nav-links li {
-    padding-bottom: 18px;
-    font-weight: 600;
-  }
-
-  .nav-links li a {
-    color: inherit;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-
-  .nav-links li a:hover {
-    color: gold;
-  }
-
-  .nav-links .open {
-    display: flex;
-  }
-
-  .left-buttons {
-    left: 3.2% !important;
-  }
-}
-
-@media (max-width: 1024px) {
-  .left-buttons {
-    top: 550%;
-    left: 1.2%;
-    position: absolute;
-  }
-
-  .right-buttons {
-    display: none;
-  }
-
-  .logo {
-    margin: auto;
-  }
-
-  .nav-container {
-    flex-direction: row-reverse;
-    align-items: flex-start;
-    padding: 4px;
-    margin-top: 4px;
-  }
-
-  .menu-icon {
-    display: flex;
-    color: #fff;
-  }
-
-  .nav-links {
-    display: none;
-    flex-direction: column;
-    background-color: #85c5b9;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    padding-left: 20px;
-    padding-top: 5px;
-  }
-
-  .nav-links li {
-    padding-bottom: 18px;
-    font-weight: 600;
-  }
-
-  .nav-links li a {
-    color: inherit;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-
-  .nav-links li a:hover {
-    color: gold;
-  }
-
-  .nav-links.open {
-    display: flex;
-  }
-}
-
-@media (min-width: 1025px) {
-  .nav-container {
-    justify-content: space-around;
-    padding: 1rem 2rem;
-  }
-
-  .nav-links {
-    display: flex !important;
-    flex-direction: row;
-    background-color: transparent;
-    position: static;
-    width: auto;
-    padding: 0;
-  }
-
-  .nav-links li {
-    margin-right: 20px;
-    padding: 0;
-  }
-
-  .nav-links li a,
-  .right-buttons .button {
-    color: #fff;
-    transition: color 0.3s ease;
-  }
-
-  .nav-links li a:hover {
-    color: gold;
-  }
-
-  .menu-icon {
-    display: none;
-  }
-
-  .right-buttons {
-    display: flex;
-  }
-
-  .right-buttons .button {
-    margin-right: 10px;
-    border: 0;
-    background-color: transparent;
-    font-weight: 700;
-    cursor: pointer;
-  }
-
-  .right-buttons .button:hover {
-    color: gold !important;
-  }
-
-  .cart {
-    margin-left: 10px;
-    cursor: pointer;
-  }
 }
