Update background color in .text class

--- a/src/Layout/Content1.css
+++ b/src/Layout/Content1.css
@@ -20,7 +20,7 @@
 }
 
 .text {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: #00000040;
   color: white;
   padding: 20px;
   border-radius: 10px;
